# ceresgame

./: .gitignore  CMakeLists.txt  README.md  actor.c  actor.h  animation.c  camera.c  camera.h  config.h  cvector.h  gamestate.h  jsontests.sln  jsontests.vcxproj  jsontests.vcxproj.filters  main.c  map.c  map.h  resources.c  resources.h  solid.c  solid.h  texture.c  texture.h  timer.h  vcpkg.json
res/: map.tmj  map2.tmj  tiles.tsx
src/: actor.c  actor.h  animation.h  cvector.h  gamestate.h  main.c  map.h  solid.c  timer.c
